Fixed text size and scrolling on mobile and desktop

--- a/css/defaults.css
+++ b/css/defaults.css
@@ -9,17 +9,19 @@
 }
 h1 {
     font-family: "Sansation", sans-serif;
-   font-size:  max(3em, min(10vw, 10vh));
+   font-size:  3rem;
     line-height: 0.99;
 }
 h2 {
-    font-size:  max(2em, min(4vw, 4vh));
+    font-size:  2rem;
     /*line-height: 0.99;*/
 }
+
+
 p{
     color: inherit;
     max-width: 100ch;
-    font-size: max(1.3em,min(2vh,2vw));;
+    font-size: 1rem;
 }
 html{
     overflow-x: hidden;
@@ -43,4 +45,16 @@ section{
     width:100vw;
     /*padding: 1em;*/
     position: relative;
+}
+
+@media (orientation: portrait), (max-aspect-ratio: 1.2) {
+    h1 {
+        font-size:  3rem;
+    }
+    h2 {
+        font-size:  2rem;
+    }
+    p{
+        font-size: 1rem;
+    }
 }
