--- a/css/index.css
+++ b/css/index.css
@@ -270,11 +270,12 @@
 .package-info {
     flex-grow: 1;
     display: flex;
-    padding: min(5vw, 5vh);
+    padding: 2em;
     gap: 5em;
     width: 100%;
     max-width: 100vw;
-    height: 100%;
+    /*flex-basis: 50ch;*/
+    height: fit-content;
     overflow: hidden;
     justify-content: space-between;
     align-items: center;
@@ -306,6 +307,7 @@
     display: flex;
     gap: var(--tile-font-size);
     flex-wrap: wrap;
+    min-height: fit-content;
 }
 
 
