--- a/css/responsive.css
+++ b/css/responsive.css
@@ -62,6 +62,7 @@
         flex-direction: column;
         align-items: start;
         justify-content: space-between;
+        gap: 1em;
     }
     /*.package-info .about-container{*/
     /*    flex: 0 0 100%;*/
@@ -73,6 +74,13 @@
     .package-info .package-tiles .tile{
         min-width: 40%;
 
+    }
+    .tile h2{
+         padding: 0 0 1em 0;
+        font-size: 1.3em;
+    }
+    .tile .content span{
+        font-size: 1em;
     }
 
 }
